# builds

./: .env.example  .env.salesforce.example  .gitignore  CLAUDE.md  DQ_ENRICHMENT_README.md  README.md  README_SALESFORCE_TEMPORAL.md  discover_atlan.py  dq_enrichment.py  dq_enrichment_v2.py  pyproject.toml  requirements.txt  sample_dq_results.csv  test_dq_sample.csv
data/: sample_slack_messages.json
examples/: parse_tableau_workbook.py  sample_metadata.json
reports/: analysis_report.md  analysis_results.json
src/: __init__.py  app.py  slack_client.py  slack_metadata_analyzer.py  transcript_parser.py  web_app.py
src/salesforce_temporal/: __init__.py  cli.py
src/salesforce_temporal/config/: __init__.py  settings.py
src/salesforce_temporal/exploration/: __init__.py  explore_atlan.py  explore_salesforce.py
src/salesforce_temporal/extractors/: __init__.py  activity.py  approval_history.py  base.py  field_history.py  opportunity_history.py  setup_audit_trail.py
src/salesforce_temporal/models/: __init__.py  events.py
tests/: __init__.py
tests/extractors/: test_base.py  test_field_history.py
tests/models/: test_events.py
tests/twb_parser/: __init__.py  test_extractors.py  test_parser.py
twb_parser/: README.md  __init__.py  parser.py  schema.py
twb_parser/extractors/: __init__.py  actions.py  calc_fields.py  filters.py  layout.py  stories.py
